# portfolio-backend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.local  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  static_config.yaml.in  static_config.yaml~
postgres/tables/: users.sql
postgresql/data/: create_project.sql  create_user.sql
postgresql/schemas/: public.sql
src/: auth_bearer.cpp  auth_bearer.hpp  base.cpp  base.hpp  create_session.cpp  create_session.hpp  create_user.cpp  create_user.hpp  main.cpp  user_info_cache.hpp
src/project_service/: create_project.cpp  create_project.hpp  project.cpp  project.hpp  project_by_id.cpp
src/services/comment_service/: comment.cpp  comment.hpp
src/services/like_service/: like.cpp  like.hpp
src/services/project_service/: project.cpp  project.hpp
src/services/user_service/: auth_bearer.cpp  auth_bearer.hpp  session.cpp  session.hpp  user.cpp  user.hpp  user_info_cache.hpp
src/user_service/: auth_bearer.hpp  create_session.cpp  create_session.hpp  create_user.cpp  create_user.hpp
src/utils/: ReturnValueAndSetStatus.cpp  create_json_result.cpp  response_message.cpp  utils.hpp  validate_request.cpp
tests/: CMakeLists.txt  conftest.py  test_basic.py  test_project.py  test_user.py
